--- a/index.html
+++ b/index.html
@@ -67,5 +67,9 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<footer>
+  <p>&copy; vatistasdimitris 2024</p>
+</footer>
+
 </body>
 </html>
