--- a/index.html
+++ b/index.html
@@ -67,9 +67,20 @@
 <!-- partial -->
   <script  src="./script.js"></script>
 
+<!-- Replay button -->
+<button onclick="replay()">Replay</button>
+
+<script>
+  // JavaScript function to reload the page
+  function replay() {
+    location.reload();
+  }
+</script>
+
 <footer>
   <p>&copy; vatistasdimitris 2024</p>
 </footer>
+
 
 </body>
 </html>
